syntax = "proto3";

package wice;
option go_package = "riasc.eu/wice/pkg/pb";

import "common.proto";
import "epice.proto";

message PeerDescription {
    // Type of the WireGuard interface impelementation
    enum InterfaceType {
        UNKNOWN = 0;
	    LINUX_KERNEL = 1;
	    OPENBSD_KERNEL = 2;
	    WINDOWS_KERNEL = 3;
	    USERSPACE = 4;
    }

    // Public WireGuard X25519 key
    bytes key = 1;
    
    // Hostname of the node
    string hostname = 2;

    // List of allowed IPs
    repeated string allowed_ips = 3;

    // WireGuard endpoint address
    string endpoint = 4;

    // Version of É¯ice agent
    string wice_version = 5;

    InterfaceType interface_type = 6;
}

message Peer {
    bytes public_key = 1;
    bytes preshared_key = 2;

    string endpoint = 3;
    uint32 persistent_keepalive_interval = 4;

    Timestamp last_handshake_timestamp = 5;
    Timestamp last_receive_timestamp = 6;
    Timestamp last_transmit_timestamp = 7;

    int64 transmit_bytes = 8;
    int64 receive_bytes = 9;

    repeated string allowed_ips = 10;
    uint32 protocol_version = 11;

    ICEPeer ice = 12;
    
    string name = 13;
}